# netsquid-trappedions

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile  api.rst  conf.py  emission_validation.py  index.rst  instructions.py  instructions.rst  ion_trap.py  ion_trap.rst  noise_models.py  noise_models.rst  programs.py  programs.rst  requirements.txt  setup.cfg  setup.py  test_collective_dephasing_plot.py  test_instructions.py  test_programs.py  test_requirements.txt  test_ti_parameter_set.py  ti_parameter_set.py
