
[metadata]
name = netsquid-trappedions
version = 3.1.0
author = Avis
author-email = g.avis@tudelft.nl
description = Code for simulating trapped-ion devices in quantum networks using NetSquid.
license = Apache-2.0
home-page = https://gitlab.com/softwarequtech/netsquid-snippets/netsquid-trappedions

[netsquid]
pypi-server = pypi.netsquid.org
